--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-helmet-async": "^2.0.5",
