--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@nextui-org/react": "^2.4.1",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-firebase-hooks": "^5.1.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.5",
