--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/storage": "^0.12.5",
     "@nextui-org/react": "^2.4.1",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
